Update modified files and add new assets

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -49,7 +49,7 @@
           <p class="contact__item-description">Alcazares, Cali.</p>
           <a
             class="contact__item-link"
-            href="https://g.co/kgs/vJKG4ax"
+            href="https://maps.app.goo.gl/moi3i3HETYvsPhBD9"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -64,16 +64,17 @@
       <figure>
         <a
           class="contact__item-link"
-          href="https://g.co/kgs/vJKG4ax"
+          href="https://maps.app.goo.gl/moi3i3HETYvsPhBD9"
           target="_blank"
           rel="noopener noreferrer"
         >
           <img
-            src="../../../assets/img/mapa.png"
+            src="../../../assets/img/mapa.webp"
             alt="Mapa de ubicación de la oficina"
             class="contact__map-image"
             width="600"
             height="400"
+            loading="lazy"
           />
         </a>
 
