--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <section class="footer__container">
     <a href="/" aria-label="Inicio" class="footer__logo">
       <img
-        src="../../../assets/img/logoNicolNails.jpg"
+        src="../../../assets/img/logoNicolNails.webp"
         alt="Logo de la empresa"
         class="footer__logo-img"
       />
