--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
     </nav>
     <a href="#" class="logo" style="justify-content: center; width: 80px">
       <img
-        src="../../../assets/img/logoNicolNails.jpg"
+        src="../../../assets/img/logoNicolNails.webp"
         width="50"
         height="50"
         alt="Logo"
