--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -26,7 +26,7 @@
   </div>
   <div class="image-container">
     <img
-      src="../../../assets/img/img11.jpg"
+      src="../../../assets/img/img11.webp"
       alt="Placeholder image representing refrigeration systems"
     />
   </div>
