--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -26,16 +26,13 @@
       class="first-grid"
       [ngClass]="{ 'first-grid': i === 0, 'second-grid': i === 1 }"
     >
-    <ng-container *ngFor="let item of ag; let idx = index">
       <img
-        *ngIf="shouldLoadImage(idx)"
+        *ngFor="let item of ag; let idx = index"
         [src]="'../../../assets/img/img' + item + '.webp'"
         alt="Manicure & Pedicure Nicol Rodriguez Nails"
         title="Manicure & Pedicure Nicol Rodriguez Nails"
         loading="lazy"
-        (load)="onImageLoad(idx)"
       />
-    </ng-container>
     </div>
   </div>
 </main>
