Update footer component

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer container">
   <section class="footer__container">
-    <a href="/" aria-label="Inicio" class="footer__logo">
+    <a href="#coquette" aria-label="Inicio" class="footer__logo">
       <img
         src="../../../assets/img/logoNicolNails.webp"
         alt="Logo de la empresa"
@@ -11,19 +11,13 @@
     <nav aria-label="Menú principal" class="footer__nav">
       <ul class="footer__menu">
         <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link">Contacto Rápido</a>
+          <a href="#coquette" class="footer__menu-link">Coquette</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link">Nuestros Servicios</a>
+          <a href="#servicios" class="footer__menu-link">Servicios</a>
         </li>
         <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link">Proyectos Destacados</a>
-        </li>
-        <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link">Sobre Nosotros</a>
-        </li>
-        <li class="footer__menu-item">
-          <a href="#" class="footer__menu-link">Testimonios Clientes</a>
+          <a href="#consulta" class="footer__menu-link">Contáctanos</a>
         </li>
       </ul>
     </nav>
@@ -50,24 +44,8 @@
   <hr class="footer__divider" />
 
   <section class="footer__bottom">
-    <small class="footer__copyright"
-      >&copy; 2025
-      <a href="http://jarg-dev.com" target="_blank" rel="noopener noreferrer"
-        >JA__RG</a
-      >. Todos los derechos reservados.</small
-    >
-    <nav aria-label="Enlaces legales" class="footer__legal-nav">
-      <ul class="footer__legal-menu">
-        <li class="footer__legal-item">
-          <a href="#" class="footer__legal-link">Política de Privacidad</a>
-        </li>
-        <li class="footer__legal-item">
-          <a href="#" class="footer__legal-link">Términos de Servicio</a>
-        </li>
-        <li class="footer__legal-item">
-          <a href="#" class="footer__legal-link">Configuración de Cookies</a>
-        </li>
-      </ul>
-    </nav>
+    <a href="http://jarg-dev.com" target="_blank" rel="noopener noreferrer">
+      &copy; 2025 JA__RG | Arquitecto de Software. Todos los derechos reservados.
+    </a>
   </section>
 </footer>
