Update files and fix CRLF warnings

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,12 @@ p {
   text-wrap: pretty;
 }
 
+/*a,
+strong,
+span {
+ color: var(--primary-color); 
+}*/
+
 /* Quitar estilos predeterminados de tablas */
 table {
   border-collapse: collapse;
