--- a/src/app/components/cita/list-cita/list-cita.component.html
+++ b/src/app/components/cita/list-cita/list-cita.component.html
@@ -10,15 +10,15 @@
     name="mes"
     id="mes"
     class="schedule__select"
-    [(ngModel)]="month"
-    (change)="cambiarMes(month)"
+    [(ngModel)]="citasService.month"
+    (change)="cambiarMes(citasService.month)"
   >
     <option *ngFor="let m of nombresMeses; let i = index" [value]="i">
       {{ m }}
     </option>
   </select>
 
-  <button (click)="cambiarModoCalendario()">Calendario</button>
+  <button (click)="flexWrap = !flexWrap">Calendario</button>
 </fieldset>
 
 <nav class="schedule__nav">
@@ -37,13 +37,13 @@
           'schedule__nav-item': true,
           mobile: publicService.isMobile,
         }"
-      (click)="getSelectDay(i + 1 < 10 ? '0' + (i + 1) : i + 1)"
+      (click)="citasService.getSelectDay(i + 1 < 10 ? '0' + (i + 1) : i + 1)"
     >
       <p class="schedule__nav-day">
         {{ fM.split(" ")[0] }}
       </p>
       <p class="schedule__nav-date">
-        {{ formatNumber(numberF(fM.split(" ")[1])) }}
+        {{ citasService.formatNumber(numberF(fM.split(" ")[1])) }}
       </p>
     </li>
   </ul>
@@ -51,45 +51,4 @@
 
 <div class="schedule__divider"></div>
 
-<section class="schedule__appointments">
-  <article class="schedule__appointment" *ngFor="let c of listCitasSelected">
-    <time class="schedule__appointment-time" [attr.datetime]="c.hora">
-      {{ c.hora }}
-    </time>
-    <a
-      [ngClass]="{
-        active: !!c.servicio.length,
-        'schedule__appointment-details': true
-      }"
-      [routerLink]="['/dashboard/citas', c._id ? c._id : 'create']"
-    >
-      <span class="schedule__appointment-top">
-        <h3 class="schedule__appointment-title">
-          {{
-            c.servicio.length && c.servicio[0].categoria
-              ? c.servicio[0].categoria
-              : "Disponible"
-          }}
-        </h3>
-
-        <p>
-          {{
-            c.servicio.length && c.servicio[0].duracion
-              ? c.servicio[0].duracion + " min."
-              : ""
-          }}
-        </p>
-      </span>
-
-      <small>
-        {{
-          c.servicio.length > 1
-            ? "+" + (c.servicio.length - 1) + " Servicio(s)"
-            : !c.servicio.length
-            ? "Solicitar Cita"
-            : ""
-        }}
-      </small>
-    </a>
-  </article>
-</section>
+<app-item-list-cita class="schedule__appointments"></app-item-list-cita>
