--- a/src/app/components/cita/list-cita/list-cita.component.html
+++ b/src/app/components/cita/list-cita/list-cita.component.html
@@ -1,5 +1,5 @@
 <header class="schedule__header">
-  <a aria-label="Go back" class="schedule__header-button" routerLink="/">
+  <a aria-label="Volver atrás" class="schedule__header-button" routerLink="/">
     <fa-icon [icon]="faArrowLeft"></fa-icon>
   </a>
   <h2 class="schedule__header-title">Agenda de <span>Citas de uñas</span></h2>
