--- a/src/app/components/cita/create-cita/create-cita.component.html
+++ b/src/app/components/cita/create-cita/create-cita.component.html
@@ -1,1 +1,59 @@
-<p>create-cita works!</p>
+<section class="container">
+  <form
+    [formGroup]="formulario"
+    (ngSubmit)="submitFormCreateCita()"
+    class="formulario"
+  >
+    <h2>Agendar Cita</h2>
+
+    <label>
+      WhatsApp o Celular
+      <input
+        formControlName="celular"
+        type="number"
+        placeholder="Ejemplo: 3112223344"
+        required
+      />
+    </label>
+
+    <label>
+      Tipo de servicio
+      <select
+        formControlName="categoria"
+        (change)="oncategoriaChange($event.target)"
+      >
+        <option value="">Selecciona uno</option>
+        <option *ngFor="let c of categorias" [value]="c">{{ c }}</option>
+      </select>
+    </label>
+
+    <label>
+      Servicio
+      <select
+        formControlName="servicio"
+        (change)="onServicioChange($event.target)"
+      >
+        <option value="">Selecciona un servicio</option>
+        <option *ngFor="let s of serviciosDisponibles" [value]="s.nombre">
+          {{ s.nombre }}
+        </option>
+      </select>
+    </label>
+
+    <div class="info" *ngIf="infoServicio">{{ infoServicio }}</div>
+
+    <label
+      >Fecha<input
+        formControlName="fecha"
+        type="date"
+        required
+    /></label>
+
+    <label
+      >Hora
+      <input formControlName="hora" type="time" required
+    /></label>
+
+    <button type="submit" [disabled]="formulario.invalid">Reservar</button>
+  </form>
+</section>
