--- a/src/app/modules/citas/citas.component.html
+++ b/src/app/modules/citas/citas.component.html
@@ -3,7 +3,7 @@
     <router-outlet></router-outlet>
   </main>
 
-  <nav class="schedule__footer-nav">
+  <!-- <nav class="schedule__footer-nav">
     <button
       aria-label="Home"
       class="schedule__footer-button schedule__footer-button--purple"
@@ -11,5 +11,5 @@
     >
       <fa-icon [icon]="i"></fa-icon>
     </button>
-  </nav>
+  </nav> -->
 </section>
